sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: green-energy-tracker
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
  type: ClusterIP
